# grafton-birddog

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: AboutGet200Response.md  AboutGetResponse.md  AnalogaudiosetupGet200Response.md  AnalogaudiosetupPostRequest.md  AnalogaudiosetupResponse.md  BirddogadvancesetupGet200Response.md  BirddogadvancesetupPostRequest.md  BirddogadvancesetupResponse.md  BirddogcmsetupGet200Response.md  BirddogcmsetupPostRequest.md  BirddogcmsetupResponse.md  BirddogdetsetupGet200Response.md  BirddogdetsetupPostRequest.md  BirddogdetsetupResponse.md  BirddogexpsetupGet200Response.md  BirddogexpsetupPostRequest.md  BirddogexpsetupResponse.md  BirddogexternalsetupGet200Response.md  BirddogexternalsetupPostRequest.md  BirddogexternalsetupResponse.md  BirddoggammasetupGet200Response.md  BirddoggammasetupPostRequest.md  BirddoggammasetupResponse.md  BirddogpicsetupGet200Response.md  BirddogpicsetupPostRequest.md  BirddogpicsetupResponse.md  BirddogptzsetupGet200Response.md  BirddogptzsetupPostRequest.md  BirddogptzsetupResponse.md  Birddogsil2codecGet200Response.md  Birddogsil2codecGet200ResponseDisable.md  Birddogsil2codecGet200ResponseDisableCustom.md  Birddogsil2codecGet200ResponseDisableHigh.md  Birddogsil2codecGet200ResponseDisableMed.md  Birddogsil2codecGet200ResponseDisableUltra.md  Birddogsil2codecGet200ResponseHx.md  Birddogsil2codecGet200ResponseHxHigh.md  Birddogsil2codecGet200ResponseRtmp.md  Birddogsil2codecGet200ResponseRtmpCustom.md  Birddogsil2codecPostRequest.md  (+37 more)
examples/: select_source.rs  set_source.rs
src/: client.rs  error.rs  lib.rs  models.rs
src/apis/: configuration.rs  default_api.rs
src/models/: _about_get_200_response.rs  _analogaudiosetup_get_200_response.rs  _analogaudiosetup_post_request.rs  _birddogadvancesetup_get_200_response.rs  _birddogcmsetup_get_200_response.rs  _birddogdetsetup_get_200_response.rs  _birddogexpsetup_get_200_response.rs  _birddogexternalsetup_get_200_response.rs  _birddoggammasetup_get_200_response.rs  _birddogpicsetup_get_200_response.rs  _birddogptzsetup_get_200_response.rs  _birddogsil2codec_get_200_response.rs  _birddogsil2codec_get_200_response_disable.rs  _birddogsil2codec_get_200_response_disable_custom.rs  (+64 more)
