[package]
name = "grafton-birddog"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Unofficial idiomatic rust bindings for the BirdDog RESTful API 2.0 generated using OpenAPI Generator"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-birddog"
homepage = "https://www.grafton.ai"
categories = ["api-bindings"]
keywords = ["ndi", "video", "audio", "network"]
readme = "README.md"
exclude = ["target/", ".gitignore", ".github/", ".openapi-generator*"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "^1.0", features = ["full"] }