[package]
name = "grafton-birddog"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Unofficial idiomatic rust bindings for the BirdDog RESTful API 2.0"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-birddog"
homepage = "https://www.grafton.ai"
categories = ["api-bindings"]
keywords = ["ndi", "video", "audio", "network"]
readme = "README.md"
exclude = ["target/", ".gitignore", ".github/"]

[dependencies]
reqwest = { version = "*", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "*"